<resources>
    <string name="app_name">GitHub User</string>
    <string name="github_username">Github Username</string>
    <string name="tv_user_type">Type</string>
    <string name="github_name">Full Name</string>
    <string name="btn_detail">Detail</string>
    <string name="detail_location">Location</string>
    <string name="detail_company">Company</string>
    <string name="public_repos">%d Repository</string>
    <string name="data_not_found">User Data not Found</string>
    <string name="no_follow_found">%s Data not Found</string>
    <string name="splashscreen_image">Splashscreen image</string>
    <string name="searchbar_hint">Search Username</string>
    <string name="btn_delete">Delete</string>
    <string name="public_repos_fav">%s Repository</string>
    <string name="favorite_not_found">No favorited user</string>
    <string name="theme_mode">Switch Mode</string>
    <string name="favorite_user">Favorite User</string>
    <string name="home">Home</string>
    <string name="appicon">appIcon</string>
</resources>